EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/07/2010==
gaeorn: compile fixes for linux
KLS: Added EVENT_SPELL_EFFECT_TRANSLOCATE_COMPLETE, EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT, EVENT_SPELL_EFFECT_BUFF_TIC_NPC in the similar style of the other spell effect events.

==06/06/2010==
KLS: Added spell quests. Spell quests reside in {EQEMU_DIR}/quests/spells/ and are in the format of {spell_id}.pl.  (ex: C:/eqemu/quests/spells/15.pl for greater heal)
KLS: Spell quests allow the overriding of specific spell effect. If a spell quest and sub exists then a spell's effect aside from buff duration and knockback is not used and instead the script is executed.
KLS: Two acceptable subs for spell quests: EVENT_SPELL_EFFECT_CLIENT and EVENT_SPELL_EFFECT_NPC and has a special export of $caster_id.

==06/04/2010=
Trevius: Fixed a potential crash with pick pocket.

==06/02/2010=
KLS: Revert titanium hp boost.
KLS: Random 10 grid type(1) will actually return the 10 closest in 3d space not the 10 closest on the grid list.
KLS: Added new grid type(5): Random 5 with LOS.
Trevius: Added new command #tempname <newname>, to allow temporarily renaming NPCs and Clients.  Name resets on repop or zoning.

RECOMMENDED SQL:
utils/sql/svn/1519_zone_primary_key_id.sql

==06/01/2010=
Trevius: Added new Perl Mob quest object TempName(name) to allow changing a name temporarily.  Setting no name will return the name to the original name.

==05/31/2010=
Derision: Increased the name field in the internal Ground_Spawn struct from 16 to 20 characters to cater for ground_spawns that are longer than 15 characters.

==05/27/2010==
Trevius: Unreverted the revert from R1502 and added a fix for the tradeskill container combine issue.
Trevius: Fixed a crash when using NukeItem on the Power Source slot for a Titanium client.

==05/25/2010==
KLS: Many changes..