@@ -166,6 +166,7 @@ public:
 	bool istaskactive(int task);
 	bool istaskactivityactive(int task, int activity);
 	void updatetaskactivity(int task, int activity, int count);
+	void resettaskactivity(int task, int activity);
 	void taskexploredarea(int exploreid);
 	void assigntask(int taskid);
 	void failtask(int taskid);
