@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==06/08/2010==
+Trevius: Added new quest::resettaskactivity(task, activity) command for resetting a task activity done count to 0.
+
 ==06/07/2010==
 gaeorn: compile fixes for linux
 KLS: Added EVENT_SPELL_EFFECT_TRANSLOCATE_COMPLETE, EVENT_SPELL_EFFECT_BUFF_TIC_CLIENT, EVENT_SPELL_EFFECT_BUFF_TIC_NPC in the similar style of the other spell effect events.
